@@ -23,16 +23,21 @@
 11. Parallel drawing in QMathGL (looks to complicated -- FLTK is better!)
 12. \overline{\overline{a}} ???
 13. Use arrow_plot_3d ???
+14. Mask in SVG ???
 
 ============= NEW FEATURES =============
 
 1. Centered curved text (see text2)
 2. Quality=3 for mirror+shadows? Couldn't be in bitmap only mode
 4. "latex on" option ?!?
+5. Add "text3d x y z lx ly lz nx ny nz 'txt' ['stl'='' depth=0.1 depth2=nan]"
+6. Flag to determine discontinuous surfaces
 
-6. Add "text3d x y z lx ly lz nx ny nz 'txt' ['stl'='' depth=0.1 depth2=nan]"
-7. Mask in EPS/SVG
-9. Flag to determine discontinuous surfaces
+9. Smooth masks (like dashing)
+10. Add command 'clabel'?
+11. Adjust box around the text using actual height of symbols in the text
+12. Check and extend 'ctick'
+13. Check '[xyz]tick' for named factor + named labels
 
 ZZ. Update *.i for new functions {before release!!!}
 
@@ -85,6 +90,7 @@ D. Docs about JS interface
 5. Add style '^','_' for 'smooth' to find upper/lower bounds.
 6. Example with qgl_example.cpp
 7. Denote that LoadFont() need first argument without extension! Or parse "*.vfm", "*.vfmb" internally.
+8. Denote change of 'mask' -- add angle. Denote export reduction in EPS format
 
 ZZ. Update time.texi {before release!!!}
 
